--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <div id="login-overlay" class="login-overlay">
   <div class="login-box">
-    <h2>Rastreamento Seguro</h2>
+    <img src="img/logo-wiu.png" alt="Wiu Logo" class="logo">
+    <h2>Wiu Rastreamento Seguro</h2>
     <p>Insira o código de rastreio para visualizar a carga.</p>
     <input type="text" id="access-code" placeholder="Código de Acesso" maxlength="6">
     <button id="btn-login">Rastrear Carga</button>
-    <p id="error-msg" style="color: red; display: none; margin-top: 10px;">Código inválido.</p>
+    <p id="error-msg" style="color: darkblue; display: none; margin-top: 10px;">Código inválido.</p>
   </div>
 </div>
 
